# qusprout

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Config.md  FAQ.md  README.md  README_temp.md  Release_Notes.md  build.md  build_qusprout.sh  service_qusprout.sh
common/: Singleton.h  SystemHandle.cpp  SystemHandle.h  TimerTask.cpp  TimerTask.h  base64.cpp  base64.h  crc32.cpp  crc32.h  general.h  qulog.cpp  qulog.h  utility.h
config/: qusprout-master.yaml  qusprout-slave.yaml  qusprout-work.yaml  qusprout.yaml  quwork.yaml
docker/: Dockerfile  pull_image.txt  qrng_pcie.h  start_qusprout.sh
docker_build/: Dockerfile
docs/: Config.md  Docker.md  Metrics.md  ThriftApi.md  qusprout.json
examples/: CMakeLists.txt
examples/bellpair/: CMakeLists.txt  bellpair.cpp
examples/common/: gate.cpp  gate.h
examples/grover/: CMakeLists.txt  grover.cpp
idl/: README.md  ecode.thrift  qurootresource.thrift  qusprout.thrift  qusproutdata.thrift  resource.thrift  slave.thrift  statistics.thrift  update_py.sh  work.thrift
master/: CMakeLists.txt  main.cpp
master/comm/: Base.cpp  Base.h  SelfStruct.cpp  errorcode.h
master/config/: Config.cpp  Config.h
master/http/: requestmanager.cpp  router.cpp  router.h  struct.cpp  struct.h
master/interface/: MasterServer.cpp  MasterServer.h  QuSproutServer.cpp  QuSproutServer.h  SlaveServer.cpp  ecode_types.h  qusproutdata_types.cpp  qusproutdata_types.h  resource_types.cpp  resource_types.h  statistics_types.cpp  statistics_types.h
master/register/: Register.cpp
master/resourcemanager/: ResourceManager.cpp  ResourceManager.h
master/rpcclient/: QuRootClient.cpp  QuRootClient.h  SlaveClient.cpp  SlaveClient.h  WorkClient.cpp  WorkClient.h
master/rpcserver/: MasterServerHandle.cpp  MasterServerHandle.h  QuSproutServerHandle.cpp  QuSproutServerHandle.h  RpcServer.cpp  RpcServer.h
master/taskmanager/: TaskManager.cpp  TaskManager.h  TaskPool.cpp  TaskPool.h
master/timertask/: ResourceTimer.cpp  TaskTimer.cpp  TimerHandle.cpp
qusprout/: CMakeLists.txt  main.cpp
qusprout/comm/: Base.cpp  Base.h  SelfStruct.cpp  SelfStruct.h  errorcode.cpp  errorcode.h
qusprout/config/: Config.cpp  Config.h
qusprout/http/: httpserver.cpp  httpserver.h  requestmanager.cpp  requestmanager.h  router.cpp  router.h  struct.cpp  struct.h
qusprout/interface/: MasterServer.cpp  QuRootServer.cpp  QuRootServer.h  QuSproutServer.cpp  QuSproutServer.h  ecode_constants.cpp  qurootresource_types.cpp  qurootresource_types.h  qusprout_types.h  qusproutdata_types.cpp  qusproutdata_types.h  resource_types.cpp  resource_types.h
qusprout/metrics/: metrics.cpp  metrics.h
qusprout/random/: RandomCard.cpp  RandomCard.h
qusprout/register/: Register.cpp  Register.h
qusprout/resourcemanager/: ResourceManager.cpp  ResourceManager.h
qusprout/rpcclient/: QuRootClient.cpp  QuRootClient.h  QuWorkClient.cpp  QuWorkClient.h
qusprout/rpcserver/: QuSproutServerHandle.cpp  QuSproutServerHandle.h  RpcServer.cpp  RpcServer.h
qusprout/taskmanager/: TaskManager.cpp  TaskManager.h
qusprout/timertask/: QuRootTimer.cpp  QuRootTimer.h  TaskTimer.cpp  TaskTimer.h  TimerHandle.cpp  TimerHandle.h
quwork/: CMakeLists.txt
quwork/command/: executor.cpp  executor.h
quwork/common/: CmdParams.h  QuESTIniter.cpp  QuESTIniter.h
quwork/config/: Config.cpp  Config.h
quwork/interface/: QuSproutServer.cpp  QuSproutServer.h  ecode_constants.cpp  qusproutdata_types.cpp  qusproutdata_types.h
quwork/node/: NodeData.cpp  NodeData.h  WorkNodeHandler.cpp  WorkNodeHandler.h
quwork/server/: WorkServerHandler.cpp  WorkServerHandler.h  main.cpp
slave/: CMakeLists.txt  main.cpp
slave/comm/: Base.cpp  Base.h
slave/config/: Config.cpp  Config.h
slave/interface/: QuSproutServer.cpp  QuSproutServer.h  SlaveServer.h  WorkServer.cpp  WorkServer.h  ecode_types.cpp  ecode_types.h  qusproutdata_types.cpp  qusproutdata_types.h  slave_types.h  statistics_types.cpp  work_types.h
slave/register/: Register.cpp  Register.h
slave/rpcclient/: MasterClient.cpp  MasterClient.h  WorkClient.cpp  WorkClient.h
slave/rpcserver/: RpcServer.cpp  RpcServer.h  SlaveServerHandle.cpp  SlaveServerHandle.h
slave/statistics/: Statistics.cpp  Statistics.h
slave/taskmanager/: TaskManager.cpp  TaskManager.h
slave/timertask/: HeartbeatTimer.cpp  HeartbeatTimer.h  ResourceTimer.cpp  ResourceTimer.h  StatisticsTimer.cpp  StatisticsTimer.h  TaskTimer.cpp  TimerHandle.cpp  TimerHandle.h
test/pyecharts_django_demo/: a.db  carete.sql  manage.py  readme.txt
test/testbackend/: Makefile  client.cpp
test/testglog/: Makefile  testglog.cpp  testglog1.cpp
test/testwork/: Makefile  main.cpp  testAll.cpp  testAll.h  testGateCNOT.cpp  testGateCNOT.h  testGateCP.cpp  testGateCP.h  testGateCR.cpp  testGateCR.h  testGateCRX.cpp  testGateCRX.h  testGateCRY.cpp  testGateCRY.h  testGateCRZ.cpp  testGateCRZ.h  testGateCU.cpp  testGateCU.h  testGateCU1.cpp  testGateCU1.h  testGateCU3.cpp  testGateCU3.h  testGateCX.cpp  testGateCX.h  testGateCY.cpp  testGateCY.h  testGateCZ.cpp  testGateCZ.h  testGateGetPauli.h  testGateH.cpp  testGateH.h  testGateP.cpp  testGateP.h  testGateR.cpp  testGateR.h  testGateRX.cpp  testGateRX.h  testGateRXX.cpp  testGateRXX.h  testGateRY.cpp  (+43 more)
unittest/: CMakeLists.txt
unittest/testapi/: CMakeLists.txt  gate.h  struct.h  testaddgatecmd.h  testgetamp.h  testgetepaulisum.cpp  testgetepaulisum.h  testgetmeasure.cpp  testgetmetrics.cpp  testgetmetrics.h  testprob.cpp  testprob.h  testreleaseenv.cpp  testrungatecmd.cpp
unittest/testgate/: CMakeLists.txt  main.cpp  testAll.cpp  (+81 more)
work/: CMakeLists.txt
work/command/: executor.cpp  executor.h
work/common/: CmdParams.h  QuESTIniter.cpp  QuESTIniter.h
work/config/: Config.cpp  Config.h
work/interface/: QuSproutServer.cpp  QuSproutServer.h  ecode_constants.cpp  ecode_constants.h  ecode_types.cpp  ecode_types.h  qusprout_types.h  qusproutdata_types.cpp  qusproutdata_types.h
work/node/: NodeData.cpp  NodeData.h  WorkNodeHandler.cpp  WorkNodeHandler.h
work/server/: WorkServerHandler.cpp  WorkServerHandler.h  main.cpp
(+84 files in other folders)
